cmake_minimum_required(VERSION 3.26)
project(untitled2)

set(CMAKE_CXX_STANDARD 23)
# Structures
add_executable(untitled2
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_8.cpp"
        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/btree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_5/splay_tree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/btree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_1.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_2.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_3.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_4.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_5.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_6.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_7/practice/spliting/btree_7.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_6/mway_tree.cpp"
#        "Projects/Base Classes/Trees/tries.cpp"
#        "Projects/Base Classes/Trees/segment_tree.cpp"
#        "Projects/Base Classes/Trees/fenwick_tree .cpp"
#        "Projects/Base Classes/Trees/mway_tree.cpp"
#        "Projects/Base Classes/Trees/splay_tree.cpp"
#        "Projects/Challanges/Data Structures/Hash Table/ht_ch_1/ht_ch_1.cpp"
#        "Projects/Challanges/Data Structures/Hash Table/ht_ch_2/ht_ch_2.cpp"
#        "Projects/Base Classes/Pair/pair.cpp"
#        "Projects/Base Classes/Vectors/vector.cpp"
#        "Projects/Base Classes/Heeps/min_heep.cpp"
#        "Projects/Base Classes/Heeps/max_heep.cpp"
#        "Projects/Base Classes/Trees/btree.cpp"
#        "Projects/Base Classes/Trees/b+tree.cpp"
#        "Projects/Methods/Other/Hash Functions/hash_functions.cpp"
#        "Projects/Methods/Other/Bit Wise Op/main.cpp"
#        "Projects/Base Classes/Hash Table Table/Separate Chaining/hash_table_2.cpp"
#        "Projects/Base Classes/Hash Table Table/Separate Chaining/hash_table_3.cpp"
#        "Projects/Base Classes/Hash Table Table/Open Addressing/hash_table_1.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/g_ch_1.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/vector.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/unordered_map.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/map.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/pair.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/g_class/Graph.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/g_class/Graph.h"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/Sub Data Types/red_black_tree.cpp"
#        "Projects/Challanges/Data Structures/Graph/g_ch_1/Data Types/hash_table.cpp"
#        "Projects/Data Structures/Tree/AVL Tree/main.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_3/avl_tree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_3/Data Types/vector.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_3/Data Types/queue.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/red_black_tree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/Full Tree/rb_pr_te.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/Full Tree/rb_tr_1.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/Full Tree/rb_tr_2.cpp"
#        "Projects/Base Classes/Hash Table Table/hash_table.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_1.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_2.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_3.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_4.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_5.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_6.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_4/Practice/rb_pr_7.cpp"
#        "Projects/Base Classes/Trees/red_black_tree.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_1/t_ch_1.cpp"
#        "Projects/Challanges/Data Structures/Tree/Data Types/vector.cpp"
#        "Projects/Challanges/Data Structures/Tree/Data Types/queue.cpp"
#        "Projects/Challanges/Data Structures/Tree/Data Types/pair.cpp"
#        "Projects/Challanges/Data Structures/Tree/t_ch_2/t_ch_2.cpp"
#        "Projects/Methods/Sorts/Merge Sorts/merge_sort.cpp"
#        "Projects/Methods/Sorts/Basic Sorts/Insertion_sort.cpp"
#        "Projects/Methods/Sorts/Basic Sorts/all_basic_sorts.cpp"
#        "Projects/Methods/Sorts/Basic Sorts/bubble_sort.cpp"
#        "Projects/Methods/Sorts/Basic Sorts/selection_sort.cpp"
#        "Projects/Data Structures/Tree/RecursiveTree.cpp"
#        "Projects/Data Structures/Tree/Tree Algo/Tree_Algo.cpp"
#         Projects/Methods/Other/Recursion/Factorial.cpp
#         Projects/Methods/Other/Recursion/CallStack.cpp
#        "Projects/Data Structures/Heaps/main.cpp"
#        "Projects/Data Structures/Graph/main.cpp"
#        "Projects/Data Structures/Graph/Queue.cpp"
#        "Projects/Data Structures/Graph/Queue.h"
#        "Projects/Data Structures/Tree/main.cpp"
#        "Projects/Data Structures/Hash Table Table/main.cpp"
#        "Projects/Data Structures/Stack/main.cpp"
#        "Projects/Data Structures/Queue/main.cpp"
#        "Projects/Data Structures/Tree/Tree Algo/Queue.cpp"
#        "Projects/Data Structures/Tree/Tree Algo/Queue.h"
#        "Projects/Data Structures/DLL/main.cpp"
#        "Projects/Data Structures/DLL/main.cpp"
)
